Create and Update flow added

--- a/ContosoPizzaEFCoreAndRazor.UI/Pages/pizza/home.cshtml
+++ b/ContosoPizzaEFCoreAndRazor.UI/Pages/pizza/home.cshtml
@@ -6,8 +6,13 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <a asp-page="./create" class="btn btn-primary">Add New Pizza</a>
+        </div>
+    </div>
+    <div class="row">
 
-        <table class="table table-bordered" id="employeeTable">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -15,6 +20,9 @@
                     </th>
                     <th>
                         Price
+                    </th>
+                    <th>
+                        Edit
                     </th>
                 </tr>
             </thead>
@@ -24,6 +32,7 @@
                     <tr>
                         <td>@item.Name</td>
                         <td>@item.Price</td>
+                        <td><a asp-page="./edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a></td>
                     </tr>
                 }
             </tbody>
