Delete operation added

--- a/ContosoPizzaEFCoreAndRazor.UI/Pages/pizza/home.cshtml
+++ b/ContosoPizzaEFCoreAndRazor.UI/Pages/pizza/home.cshtml
@@ -24,6 +24,9 @@
                     <th>
                         Edit
                     </th>
+                    <th>
+                        Delete
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -33,6 +36,7 @@
                         <td>@item.Name</td>
                         <td>@item.Price</td>
                         <td><a asp-page="./edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a></td>
+                        <td><a asp-page="./delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a></td>
                     </tr>
                 }
             </tbody>
